<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/layout_container"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/calendar_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/calendar_textview_value"
        android:textColor="#000000"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/button0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button0_value"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button1_value"
        android:textColor="#000000"/>

</LinearLayout>